fix: fix gap for Checkbox component

--- a/react-components/src/components/Checkbox/Checkbox.scss
+++ b/react-components/src/components/Checkbox/Checkbox.scss
@@ -1,7 +1,7 @@
 .checkbox {
   cursor: pointer;
   display: inline-flex;
-  gap: 5px;
+  gap: 10px;
   align-items: center;
 
   &__input {
